--- a/index.html
+++ b/index.html
@@ -63,25 +63,48 @@
       // }
       // console.log(longestCommonPrefix(["reflower", "flow", "flight"]));
 
-      function isValid(s) {
-        const reverseMap = {
-          "{": "}",
-          "(": ")",
-          "[": "]",
-        };
-        let strArr = s.split("");
-        let res = true;
-        let temp = ~~(strArr.length / 2);
-        for (let i = 0; i < temp; i++) {
-          console.log(reverseMap[strArr[i]], strArr[strArr.length - 1 - i]);
-          res=reverseMap[strArr[i]] === strArr[strArr.length - 1 - i]
-            ? res && true
-            : res && false;
+      // function isValid(s) {
+      //   const reverseMap = {
+      //     "{": "}",
+      //     "(": ")",
+      //     "[": "]",
+      //   };
+      //   let strArr = s.split("");
+      //   let res = true;
+      //   let temp = ~~(strArr.length / 2);
+      //   for (let i = 0; i < temp; i++) {
+      //     console.log(reverseMap[strArr[i]], strArr[strArr.length - 1 - i]);
+      //     res=reverseMap[strArr[i]] === strArr[strArr.length - 1 - i]
+      //       ? res && true
+      //       : res && false;
+      //   }
+      //   return res;
+      // }
+
+      // console.log(isValid("(]"));
+
+      function mergeTwoLists(list1, list2) {
+        let tempListNode = { next: null, val: 0 };
+        let tempnode = tempListNode;
+
+        while (list2 && list1) {
+          if (list1?.val >= list2?.val) {
+            tempnode.next = list2;
+            list2 = list2.next;
+          } else {
+            tempnode.next = list1;
+            list1 = list1.next;
+          }
+          tempnode = tempnode.next;
         }
-        return res;
+
+        if (list1) tempnode.next = list1;
+        if (list2) tempnode.next = list2;
+        console.log(tempListNode, tempnode, tempListNode.next);
+        return tempListNode.next;
       }
 
-      console.log(isValid("(]"));
+      mergeTwoLists([1, 2, 4], [1, 3, 4]);
     </script>
   </body>
 </html>
